@@ -24,6 +24,7 @@ import corner.util.TapestryHtmlFormatter;
  * @author Ghost
  * @version $Revision$
  * @since 2.1
+ * @deprecated
  */
 public class CornerSelectModel implements ISelectModel {
     
