@@ -8,6 +8,7 @@ changes in version 2.2.2 	(unreleased)
 package corner.orm.tapestry.component
 * AbstractSelectFilter实现ISelectFilter接口。
 * 删除DefaultSelectFilter的接口ISelectFilter,采用抽象的父类
+* component下面几个java文件均过期，采用select下面新的组件。
 
 changes in version 2.2.1 	(2006-10-17)
 ------------------------------------------
